fixed overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,7 +9,7 @@
 
 body {
     font-size: 18px;
-    overflow-x: hidden;
+    overflow: hidden;
 
     @include breakpoint(laptopL) {
         font-size: 20px;
